Fix side bar collapse on desktop.

--- a/src/index.css
+++ b/src/index.css
@@ -124,29 +124,25 @@
   h-dvh
 
   /* w-0 sets it to close when opened w-[70vw] */
-  w-0 
 /*hides the other elements until opened  */
-  overflow-hidden 
+  w-0
+  overflow-hidden
   max-w-[70vw]
   transition-[width]
   duration-400
   ease-out
   z-35
 
-  sm:max-w-[310px]
-
-  lg:static
-  lg:visible
-  lg:w-full
-  lg:opacity-100;
+  sm:w-0
+  md:relative md:w-0;
 }
 
 .sidePanel.open {
-  @apply w-[70vw]
+  @apply 
+  w-[60vw]
+  md:w-[330px]
   duration-400
   ease-in-out
-
-  sm:w-[310px];
 }
 
 .sidePanel-menu {
@@ -155,16 +151,17 @@
   grid-rows-[auto_auto_1fr_auto]
   grid-cols-1
   px-2
+
   opacity-0
   transition-opacity
   duration-400
-
-  lg:opacity-100;
+  w-full
 }
 
 .sidePanel.open .sidePanel-menu {
-  @apply opacity-100
-  delay-200;
+  @apply 
+  opacity-100
+  delay-200
 }
 
 .overlay {
